...

class NoticeDialog extends StatelessWidget {
  const NoticeDialog({
    super.key,
    required this.title,
    required this.content,
    this.confirmLabel = '确定',
    this.contentMaxWidth,
    this.contentMaxHeightFactor = 0.56,
    this.contentFontSize,
    this.onConfirm,
  });

...
