...
              Text(
                'Ti RTC',
                style: titleStyle,
              ),
              const SizedBox(height: 5),
              const Text(
                'Based on Flutter',
                style: TextStyle(
                  color: ExampleTheme.textHint,
                  fontSize: 12,
                  fontWeight: FontWeight.w500,
                  height: 1.2,
                ),
...
